--- a/package.json
+++ b/package.json
@@ -3,12 +3,24 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@popperjs/core": "^2.10.1",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
+    "bootstrap": "^5.1.0",
+    "core-js": "^3.17.2",
+    "jquery": "^3.6.0",
+    "query-string": "^7.0.1",
     "react": "^17.0.2",
+    "react-autosuggest": "^10.1.0",
+    "react-bootstrap": "^1.6.1",
+    "react-collapsible-component": "^1.3.4",
     "react-dom": "^17.0.2",
+    "react-popper": "^2.2.5",
+    "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.3",
+    "reactstrap": "^8.10.0",
+    "typescript": "^4.4.2",
     "web-vitals": "^1.0.1"
   },
   "scripts": {
